# DomeGym

./: .dockerignore  .env.example  .env.template  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Invariants.md  Makefile  README.md  UbiquitousLanguage.md  alembic.ini  docker-compose.test.yaml  docker-compose.yaml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: code-quality-check.yml
configs/: api.yml  database.yml  rabbitmq.yml
requests/gyms/: CreateGym.http  GetGym.http  ListGyms.http  RemoveGym.http
requests/rooms/: CreateRoom.http  ListRooms.http
requests/subscriptions/: CreateSubscription.http  DeleteSubscription.http  GetSubscriptionsList.http
scripts/: gym_management_healthcheck.py
src/: README.md
src/common/: event.py
src/common/error_or/: __init__.py  error_or.py
src/common/error_or/errors/: __init__.py  base.py  error.py  error_type.py  errors.py
src/common/error_or/results/: __init__.py  result.py  result_type.py
src/common/mediator/: exceptions.py  interfaces.py  mediator.py
src/gym_management/application/: README.md  dependency_injection.py
src/gym_management/application/admin/: exceptions.py
src/gym_management/application/admins/: exceptions.py
src/gym_management/application/common/: command.py  exceptions.py  query.py
src/gym_management/application/dependency_injection/: __init__.py  main.py
src/gym_management/application/gym/: exceptions.py
src/gym_management/application/room/: expections.py
src/gym_management/application/subscription/: exceptions.py
src/gym_management/application/subscriptions/: errors.py  exceptions.py
src/gym_management/common/settings/: config.py
src/gym_management/domain/: README.md
src/gym_management/domain/admin/: aggregate_root.py  exceptions.py
src/gym_management/domain/common/: aggregate_root.py  domain_event_registry.py  domain_event_type.py  entity.py  errors.py  event.py  exceptions.py  value_object.py
src/gym_management/domain/gym/: aggregate_root.py  errors.py  exceptions.py
src/gym_management/domain/room/: aggregate_root.py  errors.py  exceptions.py
src/gym_management/domain/subscription/: __init__.py  aggregate_root.py  errors.py  exceptions.py  subscription_type.py
src/gym_management/infrastructure/: README.md  dependency_injection.py
src/gym_management/infrastructure/config/: __init__.py  api.py  config.py
src/gym_management/infrastructure/injection/: main.py
src/gym_management/presentation/: README.md
src/gym_management/presentation/api/: api.py  config.py  dependency_injection.py  injection.py  local_runner.py  main.py  runner.py
src/shared_kernel/application/: command.py  dto.py  exceptions.py  query.py
src/shared_kernel/application/command/: __init__.py  command_invoker_memory.py
src/shared_kernel/application/error_or/: __init__.py  error_or.py
src/shared_kernel/application/event/: eventbus.py  integration_event.py
src/shared_kernel/application/mediator/: exceptions.py  interfaces.py  mediator.py
src/shared_kernel/domain/: event.py
src/shared_kernel/domain/common/: aggregate_root.py  entity.py  event.py  value_object.py
src/shared_kernel/error_or/: error_or.py
src/shared_kernel/error_or/errors/: error_type.py
src/shared_kernel/error_or/results/: result.py
src/shared_kernel/infrastructure/command/: command_bus_memory.py  command_invoker_memory.py
src/shared_kernel/infrastructure/domain_event/: domain_event_bus_memory.py
src/shared_kernel/infrastructure/event/: domain_eventbus_memory.py  eventbus_memory.py  failed_events_tinydb_repository.py  functions.py
src/shared_kernel/infrastructure/eventbus/: eventbus_memory.py  functions.py
src/shared_kernel/infrastructure/interfaces/: unit_of_work.py
src/shared_kernel/infrastructure/query/: query_bus_memory.py  (+1 more)
src/shared_kernel/mediator/: exceptions.py  interfaces.py  mediator.py
tests/: conftest.py
tests/common/constants/: __init__.py  admin.py  gym.py  subscription.py
tests/common/containers/: infrastructure.py
tests/common/gym/: gym_factory.py  subscription_command_factory.py
tests/common/subscription/: subscription_query_factory.py
tests/integration/gym_management/: conftest.py
tests/subcutaneous/: conftest.py
tests/subcutaneous/gym_management/: conftest.py
(+354 files in other folders)
