[tool.poetry]
name = "domegym"
version = "0.1.0"
description = "Gym session scheduling & management application"
authors = ["Igor Kalinichenko <igorr.kalina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
dependency-injector = "^4.41.0"
orjson = "^3.10.5"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
dynaconf = "^3.2.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
testcontainers = {version = "^3.7.1", extras = ["postgresql"]}
pytest-order = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pylint = "^2.17.4"
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"

[tool.black]
line-length = 120
target-version = ["py311"]
include_trailing_comma = true
exclude = '''
(
    \.eggs
  | \.git
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
combine_as_imports = true
remove_redundant_aliases = true

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/common"
