[tool.poetry]
name = "domegym"
version = "0.1.0"
description = "Gym session scheduling & management application"
authors = ["Igor Kalinichenko <igorr.kalina@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
dependency-injector = "^4.41.0"
orjson = "^3.10.5"
pydantic-settings = "^2.7.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
testcontainers = {version = "^3.7.1", extras = ["postgresql"]}
pytest-order = "^1.1.0"
pytest-timeout = "^2.3.1"
pytest-cov = "^6.0.0"
tinydb = "^4.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.8.3"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/common"
timeout = 30
timeout_func_only = true
filterwarnings = [
    "ignore:Please use `import python_multipart` instead:PendingDeprecationWarning"
]

[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "^import",
    "^from",
    "^if __name__ == .__main__.",
    "^logger",
    "^@",
    "^def __init__",
]
